--- a/views/home.ejs
+++ b/views/home.ejs
@@ -49,7 +49,7 @@
                 <% products.forEach(function(product){ %>
                     <div class="w-60">
                         <div class="w-full h-52 flex items-center justify-center bg-[<%= product.bgcolor %>]">
-                            <img class="h-[12rem]" src="/images/products/<%=product.image%>" alt="">
+                            <img class="h-[12rem]" src="/media/upload/<%=product.image%>" alt="">
                         </div>
                         <div
                             class="flex justify-between bg-[<%= product.panelcolor %>] items-center px-4 py-4 text-[<%= product.textcolor %>]">
