--- a/views/adminHome.ejs
+++ b/views/adminHome.ejs
@@ -20,15 +20,15 @@
         </div>
     </nav>
 
-    <div class="w-full h-screen flex items-start px-20 py-20">
-        <div class="w-[25%] flex h-screen flex-col items-start">
+    <div class="w-full h-fit flex items-start px-10 py-20">
+        <div class="w-[12%] flex h-screen flex-col items-start">
             <div class="flex flex-col">
                 <a class="block w-fit mb-2 bg-orange-900 p-1 text-white" href="">All Products</a>
                 <a class="block w-fit mb-2 hover:bg-orange-900 p-1 hover:text-white" href="/admin/create">Create new product</a>
             </div>
         </div>
-        <div class="w-[75%] flex flex-col gap-5 h-screen">
-            <div class="flex items-start gap-5 flex-wrap">
+        <div class="w-[88%] ml-2 flex flex-col gap-5 h-fit">
+            <div class="flex items-start gap-3 flex-wrap">
                 <% products.forEach(function(product){ %>
                     <div class="w-60">
                         <div class="w-full h-52 flex items-center justify-center bg-[<%= product.bgcolor %>]">
