--- a/views/adminHome.ejs
+++ b/views/adminHome.ejs
@@ -40,11 +40,11 @@
                                 <h3>
                                     <%= product.name %>
                                 </h3>
-                                <h4>₹ <%= product.price %>
+                                <h4>₹<%= product.price %>
                                 </h4>
                             </div>
                             <a class="w-7 h-7 flex items-center justify-center rounded-full bg-white" href="/product/edit/<%=product._id%>">
-                                Edit
+                                <i class="fa fa-edit"></i>
                             </a>
                         </div>
                     </div>
