add update product route

--- a/views/adminHome.ejs
+++ b/views/adminHome.ejs
@@ -43,7 +43,7 @@
                                 <h4>₹<%= product.price %>
                                 </h4>
                             </div>
-                            <a class="w-7 h-7 flex items-center justify-center rounded-full bg-white" href="/product/edit/<%=product._id%>">
+                            <a class="w-7 h-7 flex items-center justify-center rounded-full bg-white" href="/admin/update/<%=product._id%>">
                                 <i class="fa fa-edit"></i>
                             </a>
                         </div>
